--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,8 @@
 name = "sheldon"
-main = "worker.js"
 compatibility_date = "2026-02-19"
 
-[assets]
-directory = "./"
-binding = "ASSETS"
+[build]
+command = ""       # No build command needed
+[site]
+bucket = "./"      # Serve files directly from project root
+entry-point = "."  # Root folder
